# vscode-colab

./: .gitignore  README.md  pyproject.toml  release.sh  requirements-dev.txt  setup.cfg  setup.py
examples/: simple_usage.ipynb
src/vscode_colab/: __init__.py  logger_config.py  server.py  setup_env.py  system.py
src/vscode_colab/environment/: __init__.py  git_handler.py  project_setup.py  python_env.py
tests/: test_server.py  test_system.py
tests/environment/: test_git_handler.py  test_project_setup.py  test_python_env.py
