[tool.poetry]
name = "vscode-colab"
version = "0.1.0"
description = "A library to set up a VS Code server in Google Colab."
authors = ["Your Name <youremail@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"