[metadata]
name = vscode-colab
version = 0.1.0
description = A library to set up a VS Code server in Google Colab.
author = Your Name
author_email = your.email@example.com
url = https://github.com/yourusername/vscode-colab
license = MIT

[options]
packages = find:
package_dir =
    = src
install_requires =
    requests
    ipython

[options.packages.find]
where = src

[options.extras_require]
testing =
    pytest
    pytest-cov

[options.entry_points]
console_scripts =
    vscode-colab = vscode_colab.server:setup_vscode_server